--- a/src/features/MerchantComment/merchantComment.css
+++ b/src/features/MerchantComment/merchantComment.css
@@ -1,6 +1,6 @@
 .merchantComment {
   display: flex;
-  padding: 64px 0px 64px 0px;
+  padding: 32px 0px 64px 0px;
 }
 .merchantComment .sign-form__box {
   margin: 0;
@@ -16,10 +16,26 @@
   width: calc(100% - 33.33%);
   height: 100%;
 }
+.merchantComment-right 
 .merchantComment-left__vote {
   display: flex;
   gap: 0 4px;
   align-items: center;
+}
+.merchantComment-right .comment-bot{
+  margin: 16px 0px;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+}
+.merchantComment-right .comment-bot button{
+  border: none;
+  outline: none;
+  background-color: transparent;
+  font-size: 16px;
+  line-height: 20px;
+  font-weight: 500;
+  color: var(--purple);
 }
 .merchantComment .vote-star {
   font-size: 24px;
@@ -57,22 +73,29 @@
   gap: 0 8px;
   margin-top: 24px;
 }
-.merchantComment-right__comment {
-}
+/* .merchantComment-right__comment {
+  background-color: burlywood;
+  
+} */
 .comment-item {
   display: flex;
   align-items: center;
   justify-content: space-between;
-  margin-top: 24px;
-  padding-top: 24px;
+  margin-top: 8px;
+  padding-top: 8px;
   border-top: 1px solid var(--purple);
 }
 
 .merchantComment .comment-user__avatar {
-  width: 32px;
-  height: 32px;
+  width: 36px;
+  height: 36px;
+  background-color: var(--purple);
   border-radius: 100%;
-  overflow: hidden;
+  font-size: 16px;
+  line-height: 36px;
+  text-align: center;
+  color: var(--bgWhite);
+  font-weight: 700;
 }
 .merchantComment .comment-user__avatar img {
   width: 100%;
@@ -105,6 +128,12 @@
   align-items: center;
   gap: 0 10px;
 }
+.merchantComment .comment-option .create{
+  font-size: 14px;
+  line-height: 16px;
+  color: var(--text-black);
+  font-weight: 600;
+}
 .merchantComment .comment-option__like {
   display: flex;
   align-items: center;
@@ -121,13 +150,19 @@
 }
 .merchantComment .comment-star__all {
   display: flex;
-  margin-top: 10px;
+  margin-top: 6px;
 }
 .comment-evalutes h3,
 .comment-evalutes span,
 .comment-evalutes p {
   line-height: 19px;
-  margin: 8px 0;
+  margin: 2px 0;
+}
+.comment-evalutes p{
+  font-size: 14px;
+  line-height: 18px;
+  font-weight: 600;
+  color: var(--text-black);
 }
 .comment-evalutes h3 {
   font-weight: 700;
