--- a/src/features/ServiceByMerchant/serviceByMerchant.css
+++ b/src/features/ServiceByMerchant/serviceByMerchant.css
@@ -3,8 +3,8 @@
   padding-top: 64px;
 }
 .ser-category {
-  width: 24.9%;
-  padding-right: 24px;
+  width: 16.6%;
+  padding-right: 6px;
 }
 .ser-category-box__item {
   list-style: none;
@@ -25,7 +25,7 @@
 }
 /* service list */
 .ser-list {
-  width: 74.7%;
+  width: 83.3%;
 }
 
 /* filter box */
@@ -89,8 +89,8 @@
 }
 .ser-list__content-list-item {
   list-style: none;
-  width: 33.3%;
-  padding: 18px;
+  width: 20%;
+  padding: 12px 8px;
 }
 .mb-cate-wrapper {
   display: none;
