--- a/src/features/CartPayment/cartPayment.css
+++ b/src/features/CartPayment/cartPayment.css
@@ -415,16 +415,18 @@
   }
   .payment-form__left {
     width: 100%;
-    padding: 24;
+    padding: 8px;
+    border-radius: 12px;
   }
   .payment-form__left input {
-    margin: 14px 0;
+    margin: 12px 0;
   }
   .payment-form__right {
     width: 100%;
-    border-radius: 24px;
-    margin-top: 24px;
-    padding: 0;
+    border-radius: 12px;
+    margin-top: 12px;
+    padding: 12px;
+    height: fit-content;
   }
   .cart-list__payment {
     padding-top: 32px;
