--- a/src/featuresMobile/SearchResult/searchResultMb.css
+++ b/src/featuresMobile/SearchResult/searchResultMb.css
@@ -1,5 +1,7 @@
 .mb-filter{
-      height: 100vh;
+      width: 100%;
+      height: 100%;
+      overflow-y: scroll;
       background-color: var(--bgWhite);
 }
 .mb-filter .home-banner__filter{
