--- a/src/features/OpenFullImage/full-img.css
+++ b/src/features/OpenFullImage/full-img.css
@@ -7,7 +7,9 @@
     height: fit-content;
     position: relative;
 }
-
+.full-img-cnt__head{
+    display: none;
+}
 .full-img-cnt__de {
     position: absolute;
     left: 0;
@@ -63,11 +65,30 @@
 
 /* Mobile */
 @media only screen and (max-width: 769px) {
-    .full-img-cnt__img {
-        width: 100vw;
+    .full-img-cnt{
+        width: 100%;
+        height: 100%;
+        background-color: var(--hover);
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+    }
+    .full-img-cnt__head{
+        display: block;
+        width: 100%;
+        padding: 12px 20px;
+    }
+    .full-img-cnt__head button{
+        border: none;
+        outline: none;
+        background-color: transparent;
+        padding: 0;
+    }
+    .full-img-cnt__img{
+        width: 100%;
         height: unset;
     }
-    .full-img-cnt__de-text{
-        line-height: 16px;
+    .full-img-cnt__de{
+        position: unset;
     }
 }
