--- a/src/features/poupSignInUp/popupSignInUp.css
+++ b/src/features/poupSignInUp/popupSignInUp.css
@@ -372,12 +372,14 @@
   }
   .sign-content__right {
     width: 100%;
+    height: 100%;
     padding: 24px;
     border-radius: 0px;
     box-shadow: none;
   }
   .sign-content {
-    padding: 0px;
+    width: 100%;
+    height: 100%;
   }
   .sign-input-name {
     flex-direction: column;
