--- a/src/features/ResetPassword/style.css
+++ b/src/features/ResetPassword/style.css
@@ -1,14 +1,42 @@
-/* .for-pass-cnt{
-    display: flex;
-    justify-content: center;
-} */
+.for-head{
+    padding: 28px 0px;
+    border-bottom: 1px solid #eeedf2;
+}
+.for-head-cnt__left .text{
+    font-size: 20px;
+    line-height: 44px;
+    margin-left: 38px;
+    font-weight: 700;
+    color: var(--purple);
+}
+.for-head-cnt__left img{
+    cursor: pointer;
+}
+.for-pass-cnt{
+    height: calc(100vh - 300px);
+}
 .for-pass-cnt__phone{
     width: 50%;
-    height: 200px;
-    background-color: burlywood;
+    height: fit-content;
     margin: auto;
     margin-top: 150px;
-    padding: 12px 20px;
+    padding: 32px 20px;
+    box-shadow: 0 6px 15px #dcd8ee;
+    border-radius: 12px;
+}
+.for-pass-cnt__phone-head{
+    width: 100%;
+}
+.for-pass-cnt__phone-head button{
+    border: none;
+    outline: none;
+    background-color: transparent;
+}
+.for-pass-cnt__phone-head span{
+    font-size: 16px;
+    line-height: 20px;
+    font-weight: 600;
+    color: var(--text-black);
 }
 .for-pass-phone{
     width: 100%;
@@ -18,5 +46,109 @@
     width: 66.66%;
 }
 .for-pass-cnt__phone-ip{
-    padding: 4px 12px;
+    border: none;
+    outline: none;
+    width: 66.66%;
+    font-weight: 600;
+    font-size: 16px;
+    line-height: 22px;
+    color: var(--text-black);
+    padding: 8px 24px;
+    border-radius: 6px;
+    background-color: var(--bg-gray)!important;
+    box-shadow: inset 0 2px 6px rgb(113 97 186 / 20%);
+    margin-top: 12px;
+}
+.for-pass-cnt__btn{
+    width: 66.66%;
+    margin-top: 18px;
+    padding: 8px 0px;
+    border: none;
+    outline: none;
+    background-color: var(--purple);
+    font-size: 16px;
+    line-height: 20px;
+    font-weight: 600;
+    color: var(--bgWhite);
+    border-radius: 6px;
+    position: relative;
+}
+.for-pass-cnt__btn .sign-loading{
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background-color: #ffffff82;
+    margin-top: -8px;
+    padding-top: 4px;
+}
+.for-pass-cnt__phone-noti span:nth-child(2){
+    font-size: 20px;
+    line-height: 26px;
+    font-weight: 700;
+}
+.for-pass-cnt__phone-noti{
+    margin: 8px;
+    font-size: 14px;
+    line-height: 20px;
+    font-weight: 600;
+    color: var(--text-black);
+}
+.for-pass-cnt__phone-err{
+    margin: 8px 0px;
+    font-size: 12px !important;
+    line-height: 16px !important;
+    font-weight: 600 !important;
+    color: var(--red-cl);
+}
+.for-pass-cnt__time{
+    margin: 16px 0px 8px 0px;
+}
+.for-pass-cnt__time span{
+    cursor: pointer;
+    font-weight: 700;
+    color: var(--purple);
+}
+.dia-no-cnt{
+    background-color: var(--bgWhite);
+    padding: 36px 48px;
+}
+.dia-no-cnt__head{
+    font-size: 22px;
+    line-height: 28px;
+    font-weight: 700;
+    color: var(--purple);
+}
+.for-er-no{
+    text-align: center;
+    margin-top: 12px;
+    font-size: 16px;
+    line-height: 24px;
+    font-weight: 700;
+    color: var(--text-black);
+}
+.for-er-no span{
+    font-size: 18px;
+    color: var(--purple);
+    cursor: pointer;
+}
+/* Mobile */
+@media only screen and (max-width: 767px) {
+    .for-head{
+        display: none;
+    }
+    .for-pass-cnt__phone{
+        width: 100%;
+        box-shadow: none;
+        margin-top: 0px;
+        background-color: var(--bgWhite);
+    }
+    .for-pass-cnt__phone-ip{
+        width: 100%;
+    }
+    .for-pass-cnt__btn{
+        width: 100%;
+    }
+    .for-footer{
+        display: none;
+    }
 }
