--- a/src/features/Account/components/Information/style.css
+++ b/src/features/Account/components/Information/style.css
@@ -69,13 +69,13 @@
   min-width: 225px;
 }
 .form-account__wraper:nth-child(2) {
-  padding: 16px 0 30px 0;
+  padding: 16px 0 18px 0;
 }
 .form-account__wrapinput {
   box-shadow: inset 0px 2px 6px rgba(113, 97, 186, 0.2);
   border-radius: 18px;
   overflow: hidden;
-  width: 100%;
+  width: 90%;
   padding: 8px 16px;
 }
 .form-account__label {
@@ -284,6 +284,9 @@
   .title_section .subtitle {
     display: none;
   }
+  .form-account__wrapinput{
+    width: 100%;
+  }
   /* cus calendar date of birth */
   .MuiDialogContent-root,
   .MuiDialogActions-root {
@@ -308,8 +311,8 @@
   .info_section {
     background-color: var(--bgWhite);
     width: 100%;
-    height: 100vh;
     padding: 20px;
+    min-height: 100vh;
   }
   .form-account__wraper {
     flex-direction: column;
