--- a/src/features/Account/components/UserAddress/user_address.css
+++ b/src/features/Account/components/UserAddress/user_address.css
@@ -126,10 +126,30 @@
 }
 /* Mobile */
 @media only screen and (max-width: 767px) {
+    .address-moba-cnt{
+        display: block;
+        height: 100%;
+        width: 100%;
+        overflow-y: scroll;
+    }
     .acc-add__btn{
         display: block;
         border: none;
         outline: none;
         background-color: transparent;
+    }
+    .us_address-cnt{
+        height: 100%;
+        padding: 0px;
+        overflow-y: scroll;
+    }
+    .us_address-cnt .title{
+        display: none;
+    }
+    .us_address-cnt .form {
+        height: 100%;
+        padding: 20px;
+        border-radius: 0px;
+        margin: 0px;
     }
 }
