--- a/src/features/MerchantComment/merchantComment.css
+++ b/src/features/MerchantComment/merchantComment.css
@@ -98,6 +98,7 @@
   height: 100%;
   object-fit: cover;
   flex-shrink: 0;
+  border-radius: 100%;
 }
 .merchantComment .comment-user {
   display: flex;
