[UPDATE] change redux thunk org detail

--- a/src/features/Footer/footer.css
+++ b/src/features/Footer/footer.css
@@ -41,7 +41,7 @@
 /* Mobile */
 @media only screen and (max-width: 769px) {
       .footer{
-            padding-bottom: 84px;
+            display: none;
       }
       .footer-cnt{
             flex-direction: column;
